--- a/app/globals.css
+++ b/app/globals.css
@@ -184,3 +184,7 @@ body:has(.resizer.isResizing) * {
     @apply bg-background text-foreground;
   }
 }
+
+.react-flow__attribution {
+  display: none !important;
+}
